Move TypeScript to familiar level

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                 <div class="skills-grid">
                     <span class="skill-tag primary">Python</span>
                     <span class="skill-tag primary">JavaScript</span>
-                    <span class="skill-tag primary">TypeScript</span>
                     <span class="skill-tag primary">React</span>
                     <span class="skill-tag">Next.js</span>
+                    <span class="skill-tag">TypeScript (familiar)</span>
                     <span class="skill-tag">Node.js</span>
                     <span class="skill-tag">Express</span>
                     <span class="skill-tag">SQL</span>
